objects/Opportunity_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approval Step</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Time__c</fullName>
        <formula>CreatedDate  - 0.0409</formula>
        <label>Fire Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Approval</relationshipLabel>
        <relationshipName>Opportunity_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Approval</label>
    <nameField>
        <displayFormat>OA-{0000}</displayFormat>
        <label>Opportunity Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>